2007-06-16  Marcus D. Hanwell <marcus@cryos.org>

	* libavogadro/src/engines/sphereengine.*, 
	libavogadro/src/engines/spheresettingswidget.ui: Removed the skeleton
	rendering functions - use the other engines thanks to changes in
	engine rendering order made by Donald. Much simpler implementation
	that can use any engine for the backbone now.

2007-06-18  Donald E. Curtis <dcurtis3@sourceforge.net>

        * libavogadro/src/glwidget.cpp: added second pass (trasnparent)
        render.

        * libavogadro/src/engine.*: added some engine flags for
        transparency atoms, bonds, molecules so that the glwidget
        has a better idea of the capabilities of the engines.  also added
        the transparencyDepth relative to others.  this needs a conceptual
        update just because i don't think it's intuitive.  if people define
        theirs higher than other engines they get priority.  i still believe
        this should be dependent on the ::radius response for the specific
        primitive type we're trying to compare.

        * libavogadro/src/glwidget.*: engines are now sorted on load
        based on their flags and their transparencyDepth.

        * libavogadro/src/engines/*: added flags and depth stuff.

2007-06-17  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/glwidget.*: Fixed a bug in mass selection where
	the pointer was going past the end of the buffer.  Had to make sure
	our pointer stays sane.

	* libavogadro/src/primitive.*: Removed old selection code.

        * libavogadro/src/selectrotate.cpp: Updated so that if there are
        multiple engines, the toggling of selection only happens once per
        primitive.

        * avogadro/src/extensions/gamessinputdialog.cpp: Fixed bug 1720467.

2007-06-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.*: Remove quit() event -- Mac clients
	should receive a closeEvent for every window (advice from
	Trolltech).
