@@ -1,3 +1,10 @@
+2007-06-19  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* libavogadro/src/glwidget.cpp (updateGeometry): Initial attempt
+	at updating geometry based on unit cell parameters. This *seems*
+	like the correct approach, but I have not checked with Benoit or
+	fully tested. This tracks PR#1739844.
+
 2007-06-16  Marcus D. Hanwell <marcus@cryos.org>
 
 	* libavogadro/src/engines/sphereengine.*, 
